Fixed nav bar cutting off header issue

--- a/scss_files/_experiences.scss
+++ b/scss_files/_experiences.scss
@@ -1,6 +1,10 @@
 @import 'variables', 'mixins', 'resets';
 
 .Experiences {
+	h1 {
+		text-align: center;
+	}
+	padding-top: 5rem;
 	display: grid;
 	background: $clr4;
 	gap: 2em;
