--- a/scss_files/_skills.scss
+++ b/scss_files/_skills.scss
@@ -4,7 +4,7 @@
 	display: grid;
 	gap: 2rem;
 	background: $clr4;
-	padding: 2rem;
+	padding: 5rem 2rem 2rem 2rem;
 	text-align: center;
 
 	&_1,
